--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/bankingapidb?serverTimezone=America/Chicago&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/bankingapidbtest?serverTimezone=America/Chicago&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=password
